--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ h1{
   }
   
   .lane {
-    width: 300px;
-    height: 600px;
+    width: 245px;
+    height: 530px;
     border: 1px solid #ccc;
     background-color: #f5f5f5;
     text-align: center;
@@ -28,8 +28,9 @@ h1{
   }
   
   .lane img {
-    max-width: 80%;
-    max-height: 80%;
+    width: 100%;
+    height: 100%;
+  object-fit: cover;
   }
   
   #buttons {
@@ -54,4 +55,6 @@ h1{
   #spinButton:hover, #betButton:hover {
     background-color: #0056b3;
   }
+  
+
   
