--- a/style.css
+++ b/style.css
@@ -61,3 +61,13 @@ h1{
     max-width: 50px;
     max-height: 100px;
   }
+  
+
+  #resultImage {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+  }
