--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 h1{
     text-align: center;
-    padding: 0px,15px,0px;
+    padding: 10px,15px,0px;
+    margin-top: 125px;
 }
 
 
@@ -11,29 +12,31 @@ h1{
   }
   
   #lanes {
+    position: relative;
     display: flex;
-    gap: 20px; 
+    gap: 0; 
+    border: grey;
   }
   
   .lane {
     width: 245px;
     height: 530px;
-    border: 1px solid #ccc;
     background-color: #f5f5f5;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-  
-  .lane img {
+    border: 10px solid gray; 
+}
+
+.lane img {
     width: 100%;
     height: 100%;
-  object-fit: cover;
-  }
-  
-  #buttons {
+    object-fit: cover;
+}
+
+#buttons {
     display: flex;
     gap: 20px; 
     justify-content: center;
@@ -41,7 +44,7 @@ h1{
     flex-direction: column-reverse;
   }
   
-  #spinButton, #betButton {
+  #spinButton {
     width: 100px;
     padding: 10px;
     background-color: #007bff;
@@ -71,3 +74,31 @@ h1{
     height: 100%;
     z-index: 2;
   }
+
+  #wager {
+    display: block; 
+    margin-top: 20px; 
+    background-color: grey;
+}
+
+#balance {
+    display: block; 
+    margin-top: 20px; 
+    font-size: 25px;
+    font-weight: bolder;
+
+}
+#wager::placeholder {
+  text-align: center; 
+  color: rgb(225,0,0,1);
+}
+
+
+#jackpotMessage {
+  display: block; 
+  margin-top: 20px; 
+  font-size: 20px;
+  font-weight: bold;
+  color: gold;
+  
+}
