--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 h1{
     text-align: center;
     padding: 10px,15px,0px;
-    margin-top: 125px;
+    margin-top: 10px;
+    font-size: 100px;
 }
 
 
@@ -72,7 +73,7 @@ h1{
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 2;
+    z-index: 4;
   }
 
   #wager {
@@ -101,4 +102,10 @@ h1{
   font-weight: bold;
   color: gold;
   
+}
+body {
+  background-image: url("img/aeeef5606d257aba19bfb577dbd75b6d@2x.jpg"); 
+  background-size: 100% 100%; 
+  background-repeat: no-repeat; 
+  background-attachment: fixed;
 }
