--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+@font-face {
+  font-family: narutoFont;
+  src: url(fonts/njnaruto.ttf);
+}
 h1{
     text-align: center;
     padding: 10px,15px,0px;
-    margin-top: 10px;
-    font-size: 100px;
+    margin-top: 40px;
+    font-size: 80px;
+    font-family: narutoFont;
+    color: lightseagreen;
 }
 
 
@@ -87,6 +93,8 @@ h1{
     margin-top: 20px; 
     font-size: 25px;
     font-weight: bolder;
+    font-family: narutoFont;
+    color: chartreuse;
 
 }
 #wager::placeholder {
@@ -101,6 +109,7 @@ h1{
   font-size: 20px;
   font-weight: bold;
   color: gold;
+  font-family: narutoFont;
   
 }
 body {
@@ -109,3 +118,7 @@ body {
   background-repeat: no-repeat; 
   background-attachment: fixed;
 }
+
+
+
+
